# gurov-ai-ceo-assitant

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ceo_assistant/: __init__.py  config.py  main.py
src/ceo_assistant/application/: pipeline.py  response_formatter.py
src/ceo_assistant/domain/: models.py
src/ceo_assistant/infrastructure/llm/: __init__.py  base.py  mock_client.py  openai_client.py
src/ceo_assistant/infrastructure/telegram/: __init__.py  bot.py
src/gurov_ai_ceo_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
